fixtures/type_errors/bad_string_escape_sequence.tl
bad : String { "hi there \p " }
---
Error:

   1: bad : String { "hi there \p " }
                               ^^
                                unknown string escape sequence
